Playing local files

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
           </div>
       
           <div class="center-align" style=" padding-top: 10vh;">
-               <a class="waves-effect waves-light btn-large amber darken-3" >
+               <a class="waves-effect waves-light btn-large amber darken-3" href="/player">
                    <i class="material-icons right " style="font-size: 30px">queue_music</i>Player
                </a>
           </div>
