Error uploading files

--- a/views/player.html
+++ b/views/player.html
@@ -4,25 +4,23 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
-    <link rel="stylesheet" href="/stylesheets/style2.css">  
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="stylesheet" href="/stylesheets/style2.css">
   </head>
-  
+
   <body>
-    
     <nav class=" black">
       <ul id="slide-out" class="side-nav fixed  blue-grey darken-4">
-        
         <li><img class="responsive-img" src="images/SoundNow-logo-letras-blanca.png" height="50" width="150"></li>
-        <li>
-         <a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>Cancion 1</a>
-        </li>
-        <li class="divider blue-grey darken-2"></li>
-        <li><a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>cancion 2</a></li>
-        <li class="divider blue-grey darken-2"></li>
-        <li><a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>cancion 3</a></li>
-        <li class="divider blue-grey darken-2"></li>
+        <div id="song-list">
+          <li><a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>Cancion 1</a></li>
+          <li class="divider blue-grey darken-2"></li>
+          <li><a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>cancion 2</a></li>
+          <li class="divider blue-grey darken-2"></li>
+          <li><a href="#!" style="color:#FFFFFF;"><i class="small material-icons">music_note</i>cancion 3</a></li>
+          <li class="divider blue-grey darken-2"></li>
+        </div>
       </ul>
       <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </nav>
@@ -30,10 +28,12 @@
   <main>
     <button id="open-file"><span class="material-icons">folder open</span></button>
     <div class="box title">
-      
+
     </div>
     <div class="box">
-      <input type="file" id="file-open">
+      <form>
+        <input type="file" id="file-open" name="uploadfile">
+      </form>
       <audio autoplay controls></audio>
     </div>
     <div class="box song-meta">
@@ -42,6 +42,9 @@
       </figure>
       <span id="song"></span>
       <span id="artist"></span>
+      <a id="share-button" class="btn-flat">
+        <i class="material-icons amber-text text-darken-3" style="font-size: 30px">share</i>
+      </a>
     </div>
   </main>
    <footer>
@@ -142,6 +145,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
     <script src="/javascripts/id3.min.js"></script>
+    <script src="/javascripts/color-thief.min.js"></script>
     <script src="/javascripts/site.js"></script>
   </body>
 </html>
